@@ -50,6 +50,10 @@ public class TsArtifact {
         return new TsArtifact(DEFAULT_GROUP_ID, artifactId, EMPTY, TYPE_JAR, version);
     }
 
+    public static TsArtifact jar(String groupId, String artifactId, String version) {
+        return new TsArtifact(groupId, artifactId, EMPTY, TYPE_JAR, version);
+    }
+
     public static TsArtifact pom(String artifactId) {
         return new TsArtifact(DEFAULT_GROUP_ID, artifactId, EMPTY, TYPE_POM, DEFAULT_VERSION);
     }
@@ -79,7 +83,7 @@ public class TsArtifact {
     protected ContentProvider content;
 
     protected Properties pomProps;
-    protected List<Profile> pomProfiles = Collections.emptyList();
+    protected List<Profile> pomProfiles = List.of();
 
     private boolean installed;
 
